# genmos_object_search

./: .gitignore  CMakeLists.txt  Design.org  LICENSE  README.md  README.org  download.py  install_dependencies.bash  old_docs.md  package.xml  setup.py
ros/: CMakeLists.txt  README.md  README.org  install_dependencies.bash  old_docs.md  package.xml  python_package  setup.py
ros/config/: sloop_basic_pomdp.yaml  sloop_mos_grpc_test.yaml  sloop_mos_osm.yaml  sloop_mos_spot_lab121_lidar.yaml
ros/config/experiments/: movo_exp1_scili8_living_room.py  movo_exp1_scili8_living_room.yaml  spot_exp1_bdai5lab.py  spot_exp1_bdai5lab.yaml  spot_exp1_local_lab121.py  spot_exp1_local_lab121.yaml  spot_exp2_bdai5kitchen.py  spot_exp2_bdai5kitchen.yaml  spot_exp2_kitchen_lab115.py  spot_exp2_kitchen_lab115.yaml  spot_exp3_atrium_cit1f.py  spot_exp3_atrium_cit1f.yaml
ros/config/experiments/legacy/: movo_exp1_scili8_living_room.py  spot_exp1_local_lab121.py  spot_exp3_atrium_cit1f.py  spot_exp3_atrium_cit1f.yaml
ros/data/: README.txt  nine_letter_words.json
ros/docs/: troubleshooting.md
ros/include/genmos_ros/processing/: occupancy_to_cloud.h  point_cloud_merger.h
ros/include/sloop_mos_ros/processing/: local_cloud_publisher.h  occupancy_to_cloud.h  point_cloud_merger.h
ros/include/sloop_mos_ros/utils/: math_utils.cpp  math_utils.h
ros/launch/: local_cloud_publisher.launch  occupancy_grid_to_cloud.launch
ros/launch/movo/: genmos_movo_action_executor.launch  genmos_movo_exp1_scili8_living_room.launch  sloop_mos_movo_action_executor.launch  sloop_mos_movo_exp1_scili8_living_room.launch  sloop_mos_movo_system.launch  view_movo_object_search.launch
ros/launch/spot/: genmos_spot_publish_grid_map.launch  sloop_mos_spot.launch  sloop_mos_spot_action_executor.launch  sloop_mos_spot_automate_task.launch  sloop_mos_spot_landmark_recorder.launch  sloop_mos_spot_publish_grid_map.launch  spot_local_cloud_publisher.launch  spot_octree_belief_publisher.launch
ros/launch/spot/deprecated/: sloop_mos_spot.launch  sloop_mos_spot_automate_task.launch  spot_octree_belief_publisher.launch
ros/launch/spot/experiments/: genmos_spot_action_executor.launch  genmos_spot_exp1_local_lab121.launch  genmos_spot_search.launch  genmos_spot_system.launch  sloop_mos_spot_action_executor.launch  sloop_mos_spot_exp1_local_lab121.launch  sloop_mos_spot_exp2_kitchen_lab115.launch  sloop_mos_spot_exp3_atrium_cit1f.launch  sloop_mos_spot_perception.launch  sloop_mos_spot_system.launch  view_spot_local_search.launch
ros/models/: download.py
ros/msg/: DefaultBelief.msg  GridMap2d.msg  GridMapLoc.msg  GridMapPose2d.msg  Loc.msg
ros/rviz/movo/: movo_object_search.rviz
ros/rviz/spot/: spot_local_search.rviz
ros/scripts/: automate_task  local_search_center_publisher.py  run_agent  run_search.py
ros/scripts/deprecated/: run_agent
ros/scripts/movo/: movo_action_executor.py  stream_camera_pose.py  stream_movo_camera_pose.py  stream_movo_yolov5_detections.py  stream_yolov5_detections.py
ros/scripts/movo/experiments/: scili8_living_room_region_center.py
ros/scripts/spot/: spot_action_executor.py  spot_arm_grasp.py  spot_automate_task_and_grasp.sh  spot_graphnav_cloud_to_grid_map.py  spot_octree_belief_publisher.py  spot_record_landmarks.py
ros/scripts/spot/deprecated/: spot_automate_task_and_grasp.sh  spot_record_landmarks.py
ros/scripts/spot/experiments/: lab115_kitchen_lidar_search_region_center.py  lab121_local_lidar_search_region_center.py  lab121_local_nolidar_search_region_center.py
ros/src/: README.md  sloop  sloop_object_search
ros/src/genmos_movo/: action_executor.py  head_jtas.py
ros/src/genmos_ros/: __init__.py  action_executor.py  genmos.py  genmos_ros.py  ros_utils.py
ros/src/genmos_ros/deprecated/: framework.py  sloop_mos.py
ros/src/genmos_spot/: __init__.py  action_executor.py  spot_search_client.py
ros/src/sloop/: agent.py
ros/src/sloop_mos_movo/: action_executor.py  torso_jtas.py  waypoint.py
ros/src/sloop_mos_ros/: __init__.py  action_executor.py  conversion.py  grid_map_utils.py  mapinfo_utils.py  ros_utils.py  sloop_mos.py
ros/src/sloop_mos_spot/: __init__.py  action_executor.py  grid_map_publisher.py  observation_interpreter.py  spot_search_client.py
ros/src/sloop_object_search_ros/: grid_map_utils.py  ros_utils.py  sloop_mos.py
ros/tests/: README.md
ros/tests/spot/: test_collect_observation.py  test_execute_local_search_actions.py  test_find_action.py  test_sloop_observation_model_on_spot_map.py  test_spot_map_with_landmarks.py
ros2/: CMakeLists.txt  README.md  install_dependencies.bash  package.xml
ros2/genmos_ros2/: __init__.py  genmos_ros2.py  ros2_utils.py
ros2/launch/: local_cloud_publisher.launch  run_search_client.launch
ros2/msg/: KeyValAction.msg  KeyValObservation.msg
ros2/scripts/: run_search.py
ros2/scripts/spot/: spot_action_executor.py
ros2/tests/: test_blocking_callback.py  test_latching_behavior.py  test_message_filter_minimum.py  test_wait_for_messages.py
ros2/tests/simple_sim/: README.md  config_simple_sim_lab121_lidar.py  config_simple_sim_lab121_lidar.yaml  lab121_lidar_points.npy  simple_sim_env_ros2.launch  simple_sim_env_ros2.py  simple_sim_init_pose_pub_ros2.py  simple_sim_map_points_publisher.py  simple_sim_ros2.rv  simple_sim_ros2.rviz  simple_sim_search.launch  test_genmos_ros2_sim.sh  test_simple_sim_env_hier_search.py  test_simple_sim_env_local_search_2d.py  test_simple_sim_env_local_search_3d.py  test_simple_sim_env_navigation.py  test_simple_sim_env_ros2_navigation.py  test_simple_sim_env_topo2d_search.py  view_simple_sim_ros2.launch  view_simple_sim_ros2.sh
ros_kinetic/: CMakeLists.txt  README.md  package.xml  setup.py
ros_kinetic/config/experiments/: movo_exp1_living_room_scili8.py
ros_kinetic/launch/: local_cloud_publisher.launch
ros_kinetic/launch/movo/: sloop_mos_movo_system.launch  view_movo_object_search.launch
ros_kinetic/msg/: KeyValAction.msg  KeyValObservation.msg
ros_kinetic/rviz/: movo_object_search.rviz
ros_kinetic/src/sloop_mos_ros/: action_executor.py  ros_utils.py  sloop_mos.py
(+686 files in other folders)
