<?xml version="1.0"?>
<package format="2">
  <name>sloop_ros</name>
  <version>0.0.0</version>
  <description>The sloop_ros package</description>
  <maintainer email="kaiyutony@gmail.com">kaiyu</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>genmsg</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>genmsg</build_export_depend>
  <build_export_depend>actionlib_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>genmsg</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>
</package>
